syntax = "proto3";

package tsr.v1; // technical support requests 

import "google/api/annotations.proto";

option go_package = "github.com/volkov-d-a/adm-requests-tracker/internal/generated;tsr_v1";

service TSRService {
    rpc CreateTSR(CreateTSRRequest) returns (CreateTSRResponse) {
        option (google.api.http) = {
            post: "/v1/tr"
            body: "*"
        };
    };
}

message TSR {
    string uuid = 1;
    string name = 2;
    string text = 3;
}

message CreateTSRRequest {
    TSR tr = 1;
}

message CreateTSRResponse {
    string uuid = 1;
}